scss/eff.app.scss
/**
 * Top level SCSS file for all ActionCenter Mobile styles.
 */

$ionicons-font-path: "../assets/fonts" !default;

// Overriding Ionic's assertive color to be EFF Red
$eff-red: #f90000;

// Let's talk about this... the above red is really unnecessarily harsh IMO -jeremy
$non-eye-burning-eff-red: #c50800;
$eff-red: $non-eye-burning-eff-red;
$tab-item-inactive: #aa0700;

$assertive: $eff-red;

@import "../bower_components/ionic/scss/ionic";
@import "./fonts";

$red: #cc0000;
$blue: #2979ff;
$green: #689f38;

// SCSS variables
$font-family-sans-serif: "Open Sans";
$font-family-light-sans-serif: "Open Sans";

// Universal styles for reuse

.welcome-carousel .slider {
	position: absolute;
	height: 100%;
	width: 100%;
}

.shadow {
    -webkit-filter: drop-shadow( 1px 1px 1px rgba(0,0,0,0.1) );
            filter: drop-shadow( 1px 1px 1px rgba(0,0,0,0.1) );
}

.swipe {
	text-transform: uppercase;
	letter-spacing: 2px;
	font-weight: 700;
	color: #fff;
	opacity: 0.4;
	text-align: center;
	position: absolute;
	bottom: 40px;
	width: 100%;
}

.vertical-center {
	display: table;
	height: auto;
	overflow: auto;
	margin: auto;
	position: absolute;
	top: 0;
	left: 0;
	bottom: 0;
	right: 0;
	width: 100%;
}

button.transparent {
  background-color: transparent;
  border: 2px solid #fff;
  border-radius: 10px;
  color: #fff;
}

.button:hover {
    color: #fff;
}

.app-body {
  background-color: $red;
  height: 100%;
  width: 100%;
}

// Styles for intro screens

.slider-container.splash {
	background-color: #1e1e1e;
	width: 100%;
	height: 100%;
	position: absolute;

	.logo {
		width: 15%;
		top: 45%;
		left:42.5%;
		position: relative;
	}
}

.slider-container.intro, .home, .post-intro {
	width: 100%;
	height: 100%;
	position: absolute;
	h1, p {
		font-size: 1.4em;
		color: #fff;
		font-weight: 300;
		text-align: center;
		margin: 20px 5%;
		line-height: 1.4;
		strong {
			font-weight: 400;
		}
	}
}

.slider-container.intro.first {
	background-color: $red;

	.graphic {
		width: 50%;
		display: block;
		margin: 0 auto;
	}
	.vertical-center {
		top: -50px;
	}
	h1 {
		margin: 20px 10%;
	}
}

.slider-container.intro.second {
	background-color: $blue;

	.graphic {
		width: 100%;
		margin-top:-20px;
		display: block;
		margin: 0 auto;
	}

	.vertical-center {
		top: -80px;
	}
}

.slider-container.intro.third {
	background-color: $green;

	.graphic {
		width: 60%;
		padding-top:60px;
		display: block;
		margin: 0 auto;
	}

	.vertical-center {
		top: -80px;
	}

	.buttons {
		text-align: center;
		width: 100%;
		margin-top:40px;
	}
	button.transparent {
	}
}


.home, .post-intro {
	background-color: $red;

	.buttons {
		text-align: center;
		width: 100%;
		margin-top:10px;
		&.share {
			position: fixed;
			bottom: 30px;
		}
	}

	p, h1 {
		margin: 0 5%;
		font-size: 18px;
		strong {
			font-weight: 400;
		}
	}
	p {
		font-size: 20px;
	}

	button.transparent {
		width: 60%;
		margin-bottom: 10px;
		text-align: left;
		padding-left: 8px;
		border-width: 1px;
	}

	i {
		font-size: 28px;
		height: 33px;
		width: 30px;
		display: inline-block;
		line-height: 28px;
		text-align: center;
		vertical-align: middle;
	}
}


// TODO(sina): Review this, as it's been quickly hacked together
.home {

    .home-row {
        height: 100%;

        .spacer-row {
          max-height: 5%;
        }

        .action-title {
            align-items: center;
            display: flex;
            justify-content: center;
            max-height: 15%;

            $action-title-font-size: 26px;
            $action-title-line-height: 1.4;
            $action-title-lines-to-show: 2;

            // Adapted from http://codepen.io/martinwolf/pen/qlFdp
            h1 {
                display: block; /* Fallback for non-webkit */
                display: -webkit-box;
                height: $action-title-font-size * $action-title-line-height * $action-title-lines-to-show; /* Fallback for non-webkit */
                margin: 0 auto;
                font-size: $action-title-font-size;
                font-weight: bold;
                line-height: $action-title-line-height;
                -webkit-line-clamp: $action-title-lines-to-show;
                -webkit-box-orient: vertical;
                overflow: hidden;
                text-overflow: ellipsis;
            }
        }

        .action-body {
            overflow: hidden;

            $action-body-font-size: 20px;
            $action-body-line-height: 1.4;
            $action-body-lines-to-show: 7;

            p {
                display: block; /* Fallback for non-webkit */
                display: -webkit-box;
                height: $action-body-font-size * $action-body-line-height * $action-body-lines-to-show; /* Fallback for non-webkit */
                margin: 0 auto;
                font-size: $action-body-font-size;
                line-height: $action-body-line-height;
                -webkit-line-clamp: $action-body-lines-to-show;
                -webkit-box-orient: vertical;
                overflow: hidden;
                text-overflow: ellipsis;
            }

        }

        .action-button {
            max-height: 15%;
            min-height: 15%;

            button.take-action {
                @extend button.transparent;
                width: 60%;
                text-align: center;
                padding-left: 8px;
                background-color: #fff;
                color: $red;
            }
        }

        .share-button {
            max-height: 15%;
            min-height: 15%;

            display: flex;
            align-items: center;
            justify-content: center;

            .buttons {
                margin: 0;
            }

            button {
              margin: 0;
            }
        }

    }

}

.post-intro {

  	.graphic {
		width: 60%;
		padding-top:60px;
		display: block;
		margin: 0 auto;
		@extend .shadow;
	}

  	.vertical-center {
		top: -30px;
	}

  	h1 {
		margin-top: 10px;
		margin-bottom:10px;
		font-size:16px;
	}

	.buttons.share {
        position: relative;
        bottom: 0;
        margin-top: 20px;
	}
}

.home .button.transparent {
		width: auto;
		padding-right:15px;
}

.list .item.item-accordion {
    line-height: 1em;
    padding-top: 0;
    padding-bottom: 0;
    //transition: 0.09s all linear;
}

/**
 * News item styling.
 */
[name="news-tab"] .list {
  img {
    max-width: 100%;
  }
  .item {
    border-width: 1px 1px 0;
  }
  .item h3 {
    white-space: normal;
  }
  .item.ion-accordion.item-body {
    border-width: 0;
  }
}

.list .item.item-accordion.ng-hide {
    line-height: 0px;
}

.list .item.item-accordion.ng-hide-add,
.list .item.item-accordion.ng-hide-remove {
    display: block !important;
}

.resize-images {
    img {
        max-width: 100%;
        height: auto;
    }
}

.title-image {
    float: left;
    max-height: 100%;
}

.tab-item.noIcon {
    padding-top: 15px;
    .tab-title {
        font-size: 150%;
    }
}

.bar-header {
  height: 60px;
}

.bar-header > * {
  margin-top: 10px !important;
}

.tab-nav {
  margin-top: 10px;
}

.list .item:first-of-type {
	margin-top: 9px;
}

.item-icon-right .ion-close {
	font-size: 18px !important;
}

.tab-item-active {
	background-color: $tab-item-inactive !important;
}

.tab-item:not(.tab-item-active) span {
	color: #fff;
	opacity: 0.8;
}

